[gd_scene load_steps=10 format=3 uid="uid://drdc5fk6ym8f2"]

[ext_resource type="ArrayMesh" uid="uid://dj6t1svcnei6i" path="res://Resources/Towers/FreezeTowerlvl1/building_tower_A_blue.obj" id="1_r4xco"]
[ext_resource type="Texture2D" uid="uid://b1ms4h5mcmjd0" path="res://Resources/Towers/hexagons_medieval.png" id="2_prlpv"]
[ext_resource type="Script" path="res://Scripts/freeze_tower_lvl_1.gd" id="3_veq11"]
[ext_resource type="PackedScene" uid="uid://cgqma0vn5it54" path="res://Scenes/mage.tscn" id="4_sl6ly"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lf0sh"]
transparency = 1
albedo_texture = ExtResource("2_prlpv")

[sub_resource type="BoxShape3D" id="BoxShape3D_nptjh"]
size = Vector3(0.919067, 1.57929, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_j4ndu"]
radius = 3.0

[sub_resource type="SphereMesh" id="SphereMesh_irljf"]
radius = 3.0
height = 0.001

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vtmmk"]
transparency = 1
albedo_color = Color(0, 0, 0, 0.537255)

[node name="Freeze_tower" type="MeshInstance3D"]
mesh = ExtResource("1_r4xco")
surface_material_override/0 = SubResource("StandardMaterial3D_lf0sh")
script = ExtResource("3_veq11")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00775146, 0.718155, 0)
shape = SubResource("BoxShape3D_nptjh")

[node name="Mage" parent="." instance=ExtResource("4_sl6ly")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 1.4, 0)

[node name="MobDetector" type="Area3D" parent="."]

[node name="Range" type="CollisionShape3D" parent="MobDetector"]
shape = SubResource("SphereShape3D_j4ndu")
disabled = true

[node name="Color_range" type="MeshInstance3D" parent="MobDetector"]
mesh = SubResource("SphereMesh_irljf")
surface_material_override/0 = SubResource("StandardMaterial3D_vtmmk")

[node name="Damage CD" type="Timer" parent="."]
wait_time = 2.4

[connection signal="input_event" from="StaticBody3D" to="." method="_on_static_body_3d_input_event"]
[connection signal="body_entered" from="MobDetector" to="." method="_on_mob_detector_body_entered"]
[connection signal="body_exited" from="MobDetector" to="." method="_on_mob_detector_body_exited"]
[connection signal="timeout" from="Damage CD" to="." method="_on_damage_cd_timeout"]
